@startuml



'skinparam linetype ortho
skinparam orthogonalLayoutStrategy none
skinparam DefaultFontName Arial
skinparam DefaultFontSize 12
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

skinparam title {
    FontSize 16
    FontColor #2C3E50
}

skinparam frame {
    BorderColor #BDC3C7
    FontColor #7F8C8D
    BackgroundColor #FAFAFA
}

hide empty members
hide methods
hide circle

title __Modelo de Dominio - EntreNós__
frame "Modelo de Dominio EntreNós" {

class Usuario
class Monedero
class CatalogoUsuario
class Habilidad
class HabilidadOfrecida
class NecesidadRegistrada
class Publicacion
class Transaccion
class Resena
class Subasta
class Propuesta
class BienOfrecido
class LogroDesbloqueado
class Logro
class PodioSemanal
class Administrador
class Solicitud
class Incidencia



Usuario "1" *-- "1" Monedero  : posee >

Administrador -up-|> Usuario : es un
Administrador "1..*" -- "1..*" Habilidad : "administra >"

Usuario "1" -- "1" CatalogoUsuario : "gestiona >"

CatalogoUsuario "1" *--- "0..*" HabilidadOfrecida : "contiene >"
CatalogoUsuario "1" *---  "0..*" NecesidadRegistrada : "contiene >"

HabilidadOfrecida "0..*" -left-> "1" Habilidad : "se basa en >"
NecesidadRegistrada "0..*" -down-> "1" Habilidad : "se basa en >"

' Relaciones de Publicación (Resolviendo la duda del ID y de la Habilidad)
HabilidadOfrecida "1" ----down "1" Publicacion : "genera >"
NecesidadRegistrada "1" ----down "1" Publicacion : "genera >"

' Flujo de Servicios (HU 3)
Usuario "2  " -- "0..*" Transaccion : "participa en >"
Transaccion "1" -- "1" Resena : "genera >"
'Resena --- HabilidadOfrecida : "califica >"

' Flujo de Subastas - Variante 3 (HU 4 y HU 5) sin tocar Transacción
Usuario "1" -- "0..*" Subasta : "publica >"
Subasta "1" *-- "0..*" Propuesta : "recibe >"
Propuesta "0..*" -- "1" Usuario : "efectuada por >"
Propuesta "1" *-- "1..*" BienOfrecido : "compromete >"


Usuario "1" -- "0..*" LogroDesbloqueado : "obtiene >"
LogroDesbloqueado "1" --> "1" Logro : "se basa en >"

Usuario "   0..3" -- "1 " PodioSemanal : "es destacado en >"

Usuario "1" -- "0..*" Solicitud : realiza >

Solicitud "1" -- "0..1" Transaccion : genera >

Solicitud "0..*" --- "1" Publicacion : genera <

Administrador "1..*" -- "0..*" Incidencia : resuelve >
Transaccion "1" -- "0..2" Incidencia : genera >
Usuario "1 " -- "0..*" Incidencia : reporta >
'Usuario -- Incidencia : posee >


}

@enduml